--- a/db.core/pom.xml
+++ b/db.core/pom.xml
@@ -8,4 +8,23 @@
     <artifactId>tools-db-core</artifactId>
     <packaging>jar</packaging>
     <version>1.0</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.tools.db</groupId>
+            <artifactId>tools-db-dataview</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.tools.db</groupId>
+            <artifactId>tools-db-basic</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
